syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ruknez/chat-server/chat/pkg/chat_v1;chat";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message SendMessageRequest{
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
    int64 userId = 10;
}

message CreateRequest {
    repeated int64 userId = 1;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}
